--- a/web/map.html
+++ b/web/map.html
@@ -29,8 +29,8 @@
 		// http://a.tiles.mapbox.com/v3/examples.map-i875mjb7/0/0/0.png
         // /home/sergpank/WORK/harta/tiles/
 		// L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-		L.tileLayer('/home/sergpank/WORK/harta/tiles/debug/tile_{z}_{y}_{x}.png', {
-            minZoom: 1,
+		L.tileLayer('/home/sergpank/WORK/harta/tiles/Hanul_Morii/{z}/tile_{z}_{y}_{x}.png', {
+            minZoom: 10,
 			maxZoom: 20
 		}).addTo(map);
 
