--- a/web/map.html
+++ b/web/map.html
@@ -29,7 +29,7 @@
 		// http://a.tiles.mapbox.com/v3/examples.map-i875mjb7/0/0/0.png
         // /home/sergpank/WORK/harta/tiles/
 		// L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-		L.tileLayer('/home/serg/WORK/harta/tiles/hanulmorii/{z}/tile_{z}_{y}_{x}.png', {
+		L.tileLayer('../tiles/hanulmorii/{z}/tile_{z}_{y}_{x}.png', {
             minZoom: 10,
 			maxZoom: 20
 		}).addTo(map);
