--- a/web/map.html
+++ b/web/map.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -20,20 +19,12 @@
     </style>
 </head>
 <body>
+
 	<div id="map"></div>
 
 	<script src="leaflet.js"></script>
-	<script>
 
-		var map = L.map('map').setView([47.40, 28.865], 16);
-		// http://a.tiles.mapbox.com/v3/examples.map-i875mjb7/0/0/0.png
-        // /home/sergpank/WORK/harta/tiles/
-		// L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-		L.tileLayer('../tiles/hanulmorii/{z}/tile_{z}_{y}_{x}.png', {
-            minZoom: 10,
-			maxZoom: 20
-		}).addTo(map);
+    <script src="map.js"></script>
 
-	</script>
 </body>
 </html>
