--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Full Screen Leaflet Map</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96457450-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-96457450-2');
+  </script>
+
+  <title>onemap.md</title>
+
   <meta charset="utf-8" />
+
   <link 
     rel="stylesheet" 
-    href="leaflet.css"
+    href="css/leaflet.css"
   />
+
   <style>
     body {
       padding: 0;
@@ -21,8 +33,8 @@
 
 <body>
   <div id="map"></div>
-  <script src="leaflet.js"></script>
-  <script src="map.js"></script>
+  <script src="js/leaflet.js"></script>
+  <script src="js/map.js"></script>
 </body>
 
 </html>
