--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -12,7 +12,7 @@
 
 <div>
   <h1>Query streets direct and show JSON (for testing purposes):</h1>
-  <form action="http://localhost:8080/onemap/search">
+  <form action="http://onemap.md/search">
     <p>
       <input type="text" name="key">
     </p>
@@ -24,7 +24,7 @@
 
 <div>
   <h1>Query streets using AJAX:</h1>
-  <form action="searchStreets()">
+  <form action="JavaScript:searchStreets()">
     <p>
       <input type="text" id="key">
     </p>
@@ -35,7 +35,7 @@
 </div>
 
 <div id="demo">
-  <h2>The XMLHttpRequest Target</h2>
+  <button onclick="loadDoc()">Click ME!</button>
 </div>
 
 </body>
