--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,11 +13,9 @@
   <title>onemap.md</title>
 
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <link 
-    rel="stylesheet" 
-    href="css/leaflet.css"
-  />
+  <link rel="stylesheet" href="css/leaflet.css" />
 
   <style>
     body {
