return geojson when searching for a highway

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -12,7 +12,7 @@
 
 <div>
   <h1>Query streets direct and show JSON (for testing purposes):</h1>
-  <form action="http://onemap.md/search">
+  <form action="http://localhost:8080/onemap/search">
     <p>
       <input type="text" name="key">
     </p>
