--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<script src="js/search.js"></script>
+<script src="js/search_return_table.js"></script>
 
 <div>
   <h1>Query streets direct and show JSON (for testing purposes):</h1>
