- Doc update - replace localhost to onemap.md for prod

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -12,7 +12,8 @@
 
 <div>
   <h1>Query streets direct and show JSON (for testing purposes):</h1>
-  <form action="http://localhost/search">
+  <form action="http://onemap.md/search">
+<!--  <form action="http://localhost/search">-->
     <p>
       <input type="text" name="key">
     </p>
